ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/ClaimsFD__c/ClaimsFD__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Has settings related to the file downloads for a claim</description>
    <label>Claims File Download</label>
</CustomObject>