ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/ClaimsFD__c/fields/Download__c.field-meta.xml
<CustomField>
    <fullName>Download__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows multi-select download of files in the current page</description>
    <label>Download</label>
    <type>Checkbox</type>
</CustomField>