ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/ClaimsFD__c/fields/DownloadUrl__c.field-meta.xml
<CustomField>
    <fullName>DownloadUrl__c</fullName>
    <description>The API or the URL which does the download</description>
    <label>DownloadUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>