ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/ClaimsFD__c/fields/MaxSizeAllowed__c.field-meta.xml
<CustomField>
    <fullName>MaxSizeAllowed__c</fullName>
    <description>The maximum size that can be downloaded</description>
    <label>MaxSizeAllowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>